--- a/Html/visual.html
+++ b/Html/visual.html
@@ -8,10 +8,10 @@
 
 </head>
 <body onload="main()">
-<svg id="snail" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
-     viewBox="0 0 496.07 269.85><style>.cls-1{fill:none">
+<!--<svg id="snail" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"-->
+<!--     viewBox="0 0 496.07 269.85><style>.cls-1{fill:none">-->
 
-</svg>
+<!--</svg>-->
 <canvas id="canvas1"></canvas>
 <script src="../Javascript/microphone.js"></script>
 <script src="../Javascript/Visual.js"></script>
