--- a/Html/ApiPractice.html
+++ b/Html/ApiPractice.html
@@ -5,6 +5,39 @@
     <title>Title</title>
 </head>
 <body>
+<img src="" id="rainbow" alt="hello">
+<script>
+    // better way to write the code below
+    console.log("about to fetch a rainbow");
 
+    catchRainbow().then(response=>{
+        console.log("Done!")
+    })
+        .catch(error=>{
+        console.log("Error!")
+        console.error(error)
+    });
+    async function catchRainbow(){
+        const response = await fetch('rainbow.jpg')
+        const blob =await response.blob();
+        document.getElementById('rainbow').src=URL.createObjectURL(blob)
+
+
+    }
+    // console.log("about to fetch a rainbow");
+    // fetch('rainbow.jpg').then(response => {
+    //     console.log(response)
+    //     return response.blob()
+    //     //blob is for images
+    // }).then(blob=>{
+    //     console.log(blob)
+    // document.getElementById('rainbow').src=URL.createObjectURL(blob)
+
+    // }).catch(error=>{
+    //     console.log('error!')
+    //     console.error(error)
+    // });
+
+</script>
 </body>
 </html>
