--- a/Html/expression.html
+++ b/Html/expression.html
@@ -94,16 +94,28 @@
     let r = /\w+/;
     let y = /[a-z]+/g;
     let d = /[a-z]+/gi;
-    let expres =/[.,?!]/
-    let nonWords =/(\W+)/ //-> saves all elements into an array
+    let expres = /[.,?!]/
+    let nonWords = /(\W+)/ //-> saves all elements into an array
+    let b = "Cats and rats and dogs with raccoons and snakes and alligators";
+
+
     console.log(h.test(k));// should return true
     console.log(k.match(r))// brings the first match
     console.log(k.match(h));// should return an array of the word hatred [Aza]
     console.log(k.match(y));// adds only lowercase words into an array
     console.log(k.match(d));// adds every word  into an array
     console.log(k.split(/[,\s/]+/)); // splits them by white space or comma and returns the results into an array
+    console.log(k.replace(/best/, "very best"));// replaces regular expression with string
+    console.log(b.replace(/\w{4,6}/, "Azazel")); // will only replace the first instance
+    console.log(b.replace(/\w{4,7}/g, "Azazel")); //anything between 4-6 letters will be replaced
+    console.log(b.replace(/([aeiou])/g, "$1$1")); //double the vowels
+
+
+
 
     let phone = /\(?\d{3}[-.)]\d{3}[-.]\d{4}/
+
+
 
 
     //Flags are a way to modify the behavior of a literary expression
@@ -121,6 +133,25 @@
     // }
     // str.split ( regular expression)
     //str. replace(regular expression , string or function)
+
+
+    function newText(){
+        let textfield;
+        let re = textfield.value();
+        let r = /\b\w+\b;
+    }
+    function replacer(match,group1){ //<---- adding parameter can get groups in expression
+if (match.length ===4){
+    return match.toUpperCase();
+}else{                //<--- will make any document that has 4 letters UPPER CASE
+    return match
+}
+
+
+
+    }
+    let newString =s.replace(r,replacer)
+
 
 
     //
