--- a/Platformer/index.html
+++ b/Platformer/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <canvas></canvas>
-<script src="platformer.js"></script>
+<script src="Javascript/Classes/player.js"></script>
+<script src="Javascript/index.js"></script>
 </body>
 </html>
