learning sprite collision

--- a/Platformer/index.html
+++ b/Platformer/index.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <canvas></canvas>
+<script src="Javascript/Classes/Spite.js"></script>
 <script src="Javascript/Classes/player.js"></script>
+<script src="Javascript/EventListner.js"></script>
 <script src="Javascript/index.js"></script>
 </body>
 </html>
