--- a/Platformer/index.html
+++ b/Platformer/index.html
@@ -6,9 +6,12 @@
 </head>
 <body>
 <canvas></canvas>
+<script src="Javascript/utills.js"></script>
+<script src="Javascript/Data/collision.js"></script>
+<script src="Javascript/Classes/CollisionBlock.js"></script>
 <script src="Javascript/Classes/Spite.js"></script>
 <script src="Javascript/Classes/player.js"></script>
 <script src="Javascript/EventListner.js"></script>
-<script src="Javascript/index.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
