--- a/Platformer/index.html
+++ b/Platformer/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <canvas></canvas>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js" integrity="sha512-cOH8ndwGgPo+K7pTvMrqYbmI8u8k6Sho3js0gOqVWTmQMlLIi6TbqGWRTpf1ga8ci9H3iPsvDLr4X7xwhC/+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="Javascript/utills.js"></script>
 <script src="Javascript/Data/collision.js"></script>
 <script src="Javascript/Classes/CollisionBlock.js"></script>
