working on login page

--- a/Generic Webpages/chicken/chicken.html
+++ b/Generic Webpages/chicken/chicken.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-    <img  class=logo src="" alt="Chicken">
+    <img  class=logo src="img/img_2.png" alt="Chicken">
     <nav class="navbar">
         <a href="#">Home</a>
         <a href="#">About</a>
