--- a/Generic Webpages/chicken/chicken.html
+++ b/Generic Webpages/chicken/chicken.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-    <img  class=logo src="img/img_2.png" alt="Chicken">
+    <img class=logo src="img/img_2.png" alt="Chicken">
     <nav class="navbar">
         <a href="#">Home</a>
         <a href="#">About</a>
@@ -16,11 +16,41 @@
         <button class="login-btn">Login</button>
 
 
-
     </nav>
 
 </header>
+<div class="wrapper">
+    <div class="form-login"></div>
+    <h2> LOGIN:</h2>
+    <form action="#">
+        <div class="input-box">
+            <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
+            <input type="email" required>
+            <label>Email</label>
 
+        </div>
+
+        <div class="input-box">
+            <span class="icon"><ion-icon name="key-outline"></ion-icon></span>
+            <input type="password" required>
+            <label>Password</label>
+
+        </div>
+
+        <div class="remember-forgot">
+            <label> <input type="checkbox">
+                Remember Me
+            </label>
+            <a href="#">Forgot Password?</a>
+
+        </div>
+        <button type="submit" class="sub-btn">Submit</button>
+
+    </form>
+</div>
+<script src="chicken.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 </body>
 </html>
