taking the day off

--- a/Generic Webpages/chicken/chicken.html
+++ b/Generic Webpages/chicken/chicken.html
@@ -46,6 +46,10 @@
         </div>
         <button type="submit" class="sub-btn">Submit</button>
 
+        <div>
+            <p>Don't Have An Account?<a href="#" class="register-link">Register</a></p>
+        </div>
+
     </form>
 </div>
 <script src="chicken.js"></script>
