coding before work

--- a/Generic Webpages/chicken/chicken.html
+++ b/Generic Webpages/chicken/chicken.html
@@ -20,13 +20,15 @@
 
 </header>
 <div class="wrapper">
-    <div class="form-login"></div>
-    <h2> LOGIN:</h2>
+    <div class="form-login">
+    <h2> Login</h2>
     <form action="#">
         <div class="input-box">
             <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
+            <label>Email
             <input type="email" required>
-            <label>Email</label>
+            </label>
+<!--            <label>Email</label>-->
 
         </div>
 
@@ -51,6 +53,7 @@
         </div>
 
     </form>
+        </div>
 </div>
 <script src="chicken.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
