--- a/Generic Webpages/chicken/chicken.html
+++ b/Generic Webpages/chicken/chicken.html
@@ -20,40 +20,42 @@
 
 </header>
 <div class="wrapper">
+    <span class="icon-close"><ion-icon name="close-circle-outline"></ion-icon></span>
     <div class="form-login">
-    <h2> Login</h2>
-    <form action="#">
-        <div class="input-box">
-            <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
-            <label>Email
-            <input type="email" required>
-            </label>
-<!--            <label>Email</label>-->
+        <h2> Login</h2>
+        <form action="#">
+            <div class="input-box">
+            <span class="icon">
+                <ion-icon name="mail-outline"></ion-icon>
+            </span>
+                <input type="email" required>
+                <label>Email </label>
+            </div>
 
-        </div>
+            <div class="input-box">
+            <span class="icon">
+                <ion-icon name="key-outline"></ion-icon>
+            </span>
+                <input type="password" required>
+                <label>Password</label>
 
-        <div class="input-box">
-            <span class="icon"><ion-icon name="key-outline"></ion-icon></span>
-            <input type="password" required>
-            <label>Password</label>
+            </div>
 
-        </div>
+            <div class="remember-forgot">
+                <label> <input type="checkbox">
+                    Remember Me
+                </label>
+                <a href="#">Forgot Password?</a>
 
-        <div class="remember-forgot">
-            <label> <input type="checkbox">
-                Remember Me
-            </label>
-            <a href="#">Forgot Password?</a>
+            </div>
+            <button type="submit" class="sub-btn">Submit</button>
 
-        </div>
-        <button type="submit" class="sub-btn">Submit</button>
+            <div class =register-login>
+                <p>Don't Have An Account?<a href="#" class="register-link"> Register</a></p>
+            </div>
 
-        <div>
-            <p>Don't Have An Account?<a href="#" class="register-link">Register</a></p>
-        </div>
-
-    </form>
-        </div>
+        </form>
+    </div>
 </div>
 <script src="chicken.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
