--- a/Generic Webpages/Rumble/index.html
+++ b/Generic Webpages/Rumble/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 <nav class="navbar">
+    <a href="#">Rumble</a>
+    <a href="#">Attack</a>
+  <button class="login-btn"><a href="html/login.html">Login</button>
 
 </nav>
 
