--- a/Generic Webpages/Rumble/html/login.html
+++ b/Generic Webpages/Rumble/html/login.html
@@ -37,7 +37,7 @@
             <button type="submit" class="sub-btn">Submit</button>
 
             <div class =register-login>
-                <p>Don't Have An Account?<a href="#" class="register-link"> Register</a></p>
+                <p>Don't Have An Account?<a href="register.html" class="register-link"> Register</a></p>
             </div>
 
         </form>
