--- a/Generic Webpages/Rumble/html/rumble.html
+++ b/Generic Webpages/Rumble/html/rumble.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="../rumbling.css">
 </head>
 <body>
+<nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="rumble.html">Rumble</a>
+    <a href="attack.html">Attack</a>
+    <button class="login-btn"><a href="login.html">Login</a></button>
+
 <section class="container">
     <div class="results"></div>
     <div class="result_image"></div>
