--- a/Generic Webpages/Rumble/html/login.html
+++ b/Generic Webpages/Rumble/html/login.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="rumble.html">Rumble</a>
+    <a href="attack.html">Attack</a>
+    <button class="login-btn"><a href="login.html">Login</a></button>
+
 <div class="wrapper">
     <span class="icon-close"><ion-icon name="close-circle-outline"></ion-icon></span>
     <div class="form-login">
