getting ready for work

--- a/Generic Webpages/Rumble/html/rumble.html
+++ b/Generic Webpages/Rumble/html/rumble.html
@@ -11,16 +11,35 @@
     <a href="rumble.html">Rumble</a>
     <a href="attack.html">Attack</a>
     <button class="login-btn"><a href="login.html">Login</a></button>
+</nav>
 
 <section class="container">
-    <div class="results"></div>
-    <div class="result_image"></div>
+    <div class="results">
+    <div class="result_image">
     <span class="user_input">
         <img src="../img/rock.png" alt="rock">
     </span>
     <span class="cpu_result">
         <img src="../img/rock.png" alt="rock">
     </span>
+    </div>
+        <div class="result">Its Time To Rumble</div>
+    </div>
+    <div class="optional_images">
+    <span class="optional_image">
+        <img src="../img/rock.png" alt="rock">
+        <p>Rock</p>
+    </span>
+    <span class="optional_image">
+        <img src="../img/Paper.png" alt="rock">
+        <p>Papper</p>
+    </span>
+    <span class="optional_image">
+        <img src="../img/scissor.png" alt="rock">
+        <p>Scissor</p>
+    </span>
+    </div>
+
 </section>
 </body>
 </html>
