rock paper scissor works

--- a/Generic Webpages/Rumble/html/index.html
+++ b/Generic Webpages/Rumble/html/index.html
@@ -13,6 +13,6 @@
   <button class="login-btn"><a href="login.html">Login</a></button>
 
 </nav>
-
+<script src="rumble.js"></script>
 </body>
 </html>
