--- a/Generic Webpages/Rumble/html/index.html
+++ b/Generic Webpages/Rumble/html/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Rumbling</title>
     <link rel="stylesheet" href="../anime.css">
 </head>
 <body>
+<header>
 <nav class="navbar">
     <a href="index.html">Home</a>
     <a href="rumble.html">Rumble</a>
@@ -13,6 +15,7 @@
   <button class="login-btn"><a href="login.html">Login</a></button>
 
 </nav>
+</header>
 <script src="rumble.js"></script>
 </body>
 </html>
