--- a/Html/fizz.html
+++ b/Html/fizz.html
@@ -4,24 +4,46 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<style>
+.bitches{color:red}
+</style>
 <body>
-<script>
-    i = 0
-  while(i<100){
-        i++
-      if(i % 15===0){
-          console.log("fizzbuzz")
-      }
-      else if(i% 5===0){
-          console.log("buzz")
-      }
-      else if(i%3===0){
-          console.log("fizz")
-      }
-      else{
-          console.log(i)
-      }
+<div>
+   <p class="bitches">bitches</p>
+</div>
+<script>     let i = 0;
+// while(i<100){
+//         i++
+//       if(i % 15===0){
+//           console.log("fizzbuzz")
+//       }
+//       else if(i% 5===0){
+//           console.log("buzz")
+//       }
+//       else if(i%3===0){
+//           console.log("fizz")
+//       }
+//       else{
+//           console.log(i)
+//       }
+
+      for(i = 1; i<=1000; i++){
+          if(i % 15===0){
+              console.log("fizzbuzz")
+          }
+          else if(i% 5===0){
+              console.log("buzz")
+          }
+          else if(i%3===0){
+              console.log("fizz")
+          }
+          else{
+              console.log(i)
+          }
+
+
   }
+
 
 </script>
 
