--- a/Cards!/cards.html
+++ b/Cards!/cards.html
@@ -2,10 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="cards.css">
 </head>
 <body>
-
+<div class="card-container">
+    <div class="card">
+        <div class="card-content">
+        <h1 >Yugioh</h1>
+        <p>
+            Yugioh is one of the best childhood card games of all time. I really love yugioh. My favorite deck is the magnet warriors. Good ol magnet warriors. Though its not the most consistent deck it a deck I love and know well.
+        </p>
+        <a href="">Read more</a>
+            </div>
+    </div>
+    <div class="card">
+        <div class="card-content">
+        <h1 >Pokemon</h1>
+        <p>
+            Pokemon is one of the best video games of my early childhood. too bad it sucks now. But it still holds that nolstigic feeling in my inner childhood. To this day I still play these games. Oh well. I hope pokemon improves in the future somehow.
+        </p>
+        <a href="">Read more</a>
+            </div>
+    </div>
+    <div class="card">
+        <div class="card-content">
+        <h1 >Tekken</h1>
+        <p>
+            Tekken is my favorite fighting game seres. I played it as a kid. Jin kazama was always my favoriter character even though I was never to good with him/ hopefully I can approve at the game some day.
+        </p>
+        <a href="">Read more</a>
+            </div>
+    </div>
+</div>
 </body>
 </html>
